# elewrap

./: .gitattributes  Cargo.toml  README.md  flake.nix
.github/workflows/: run-nixos-tests.yml
nix/: elewrap.nix  module.nix
nix/nixosModules/: elewrap.nix
nix/tests/: elewrap.nix  lib.nix
src/: main.rs
tests/: elewrap.nix  lib.nix
