[package]
name = "elewrap"
version = "1.0.0"
edition = "2021"
authors = ["oddlama <oddlama@oddlama.org>"]
description = """
Controlled static privilege escalation utility with baked-in authentication rules.
The most restrictive and lightweight replacement for sudo, doas or please.
"""
documentation = "https://github.com/oddlama/elewrap"
homepage = "https://github.com/oddlama/elewrap"
repository = "https://github.com/oddlama/elewrap"
keywords = ["access", "elevation", "privileges", "sudo"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
anyhow = "1.0.71"
const-str = "0.5.5"
libc = "0.2.147"
nix = "0.26.2"
sha2 = "0.10.7"
static_assertions = "1.1.0"
users = "0.11.0"
